--- a/src/styles/_select.scss
+++ b/src/styles/_select.scss
@@ -7,6 +7,7 @@
         background: $white;
         color: $charcoal;
         border-bottom: none!important;
+        margin: auto 0 0!important;
     }
 }
 .select2-container--default  {
